--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@types/react": "16.8.2",
     "@types/react-css-modules": "4.6.4",
     "@types/react-dom": "16.8.0",
+    "@types/react-youtube": "7.10.0",
     "axios": "0.24.0",
+    "movie-trailer": "2.1.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.3",
+    "react-youtube": "9.0.2",
     "style-loader": "3.3.1",
     "typescript": "3.3.3",
     "webpack": "5.72.0"
@@ -24,10 +27,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
